--- a/config/.env
+++ b/config/.env
@@ -3,9 +3,9 @@ PORT = 5000
 IPAddress = 127.0.0.1
 #IPAddress = 51.254.38.237
 TOKEN_KEY = QbZ0jVBt/MZYuyMrkoCDoGrWdnk1SHM0RvQifxsvlLhAQ/mJdI7Uw==
-DB_HOST = "127.0.0.1"
-DB_USER = "root"
-DB_PASSWORD = ""
+DB_HOST = "51.254.38.237"
+DB_USER = "ntsendan_db"
+DB_PASSWORD = "XN5KFw5hiqsefiIf"
 DB_NAME = "ntsendan"
 JWT_SECRET_KEY = "dfbkjgflseiia3948943954wfdchsgfuw"
 JWT_EXPIRES = 7d
